# SECURIVA

./: .dockerignore  .gitignore  Dockerfile.combined  NGROK_SETUP.md  README.md  docker-compose.yml  package-lock.json  run_tests.ps1
backend/: .dockerignore  .env.example  DEPLOY_APPRUNNER.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  create-apprunner.sh  demo_generator_workflow.py  demo_tool_confirmation.py  iam-cloudwatch-policy.json  local.db  migrate_credentials_to_dynamodb.py  pyproject.toml  run.py  sslCerts.sh  test_generator_security.py  test_pci_dss_module.py  test_telesign.py
backend/docs/: API_integration_guide.md  Authentication_Flows.md  COMPLIANCE_IMPROVEMENT_GUIDE.md  COMPLIANCE_MODULE_GENERATOR_SECURITY.md  COMPLIANCE_REPORTS_DYNAMODB_TESTING.md  COMPLIANCE_TOOLS_GUIDE.md  CONFIRMATION_PROMPTS_GUIDE.md  DYNAMODB_GUIDE.md  HIPAA_MODULE_WALKTHROUGH.md  MODULAR_COMPLIANCE_GUIDE.md  QUICK_REFERENCE_MODULE_GENERATION.md  README_COMPLIANCE_FEATURE.md  SECURE_AI_MODULE_GENERATION_SUMMARY.md  SECURE_DATA_ARCHITECTURE.md  TELESIGN_UPGRADE_GUIDE.md  TOOL_CONFIRMATION_GUIDE.md
backend/scripts/: bench_cases.jsonl  bench_chat.py
backend/tests/: README_SALESFORCE_TESTING.md  bootstrap_guidance_catalog.py  create_compliance_reports_table.py  create_dynamodb_table.py  create_guidance_catalog_table.py  create_test_user_for_salesforce.py  debug_env.py  dynamodb_credential_manager.py  dynamodb_utils.py  example_credential_usage.py  quick_mod_test.py  quick_test.py  seed_guidance_catalog_table.py  set_test_cookie.html  test_agent_validation.py  test_bootstrap_guidance_catalog.py  test_chat_handler_tool_routing.py  test_compliance_report_persistence.py  test_compliance_tools.py  test_dynamodb_connection.py  test_grounded_chat_policy.py  test_guidance_catalog.py  test_guidance_store.py  test_hipaa_module.py  test_hipaa_tools.py  test_import.py  test_modular_compliance.py  test_network_analyzer.py  test_request_validation.py  test_salesforce_mcp.py  test_salesforce_mcp_direct.py  test_sox_module.py  (+10 more)
(+211 files in other folders)
