[project]
name = "cse485-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "groq>=0.32.0",
    "mcp[cli]>=1.15.0",
    "python-dotenv>=1.1.1",
    "starlette>=0.48.0",
    "uvicorn[standard]>=0.37.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "openai>=1.109.1",
    "pathlib>=1.0.1",
    "flask-cors>=4.0.1",
]
