[project]
name = "securiva-backend"
version = "0.1.0"
description = "Securiva backend with AI automation and cloud integrations"
requires-python = ">=3.11"

dependencies = [
  # Core
  "setuptools>=80.9.0",
  "python-dotenv>=1.1.1",

  # Web framework
  "starlette>=0.48.0",
  "uvicorn[standard]>=0.37.0",
  "httpx>=0.27.0",

  # Authentication & Security
  "bcrypt>=5.0.0",
  "cryptography>=46.0.3",
  "PyJWT>=2.8.0",

  # Google APIs
  "google-api-python-client>=2.184.0",
  "google-auth>=2.37.0",
  "google-auth-oauthlib>=1.2.2",
  "google-auth-httplib2>=0.2.0",

  # AI/LLM
  "openai>=1.109.1",
  "groq>=0.32.0",
  "langchain>=1.0.5",
  "langchain-openai>=1.0.2",
  "langchain-groq>=1.0.0",

  # MCP
  "mcp[cli]>=1.15.0",
  "langchain-mcp-adapters>=0.1.12",

  # Messaging (Telesign)
  "telesign>=2.3.0",
  "telesignenterprise>=3.0.0",

  # Data validation
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
]